--- a/package.json
+++ b/package.json
@@ -14,16 +14,19 @@
     "@radix-ui/react-navigation-menu": "^1.2.5",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@react-three/drei": "^9.88.0",
+    "@react-three/fiber": "^8.15.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.1",
     "mongodb": "^6.13.0",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.1",
-    "tailwind-merge": "^3.0.1"
+    "tailwind-merge": "^3.0.1",
+    "three": "^0.158.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
